# fedora-setup

./: .gitignore  CHEATSHEET.md  CLAUDE.md  README.md  cleanup.sh  pyproject.toml  setup.sh
fedora_setup/: __init__.py  __main__.py  cleanup.py  colors.py  context.py  detect.py  runner.py  shell_init.py
fedora_setup/assets/nvim/: init.lua
fedora_setup/assets/nvim/lua/config/: keymaps.lua  options.lua
fedora_setup/assets/nvim/lua/plugins/: dap.lua  editor.lua  git.lua  lsp.lua  ui.lua
fedora_setup/assets/zellij/: config.kdl
fedora_setup/assets/zellij/layouts/: default.kdl
fedora_setup/kickstart/: __init__.py  download_iso.py  prepare_ks.py
fedora_setup/modules/: __init__.py  base.py  claude.py  cli_tools.py  cpp.py  editors.py  fonts.py  git_config.py  gpu.py  js.py  kernel.py  python_setup.py  rust.py  shell_qol.py
kickstart/: download-iso.sh  fedora-dev.ks  fedora-dev.ks.template  prepare-ks.sh
lib/: colors.sh  detect.sh  fedora_releases.sh  utils.sh
modules/: 01-base.sh  02-cli.sh  03-cpp.sh  04-kernel.sh  05-python.sh  06-js.sh  07-claude.sh  08-fonts.sh  09-rust.sh  10-gpu.sh  11-editors.sh  12-git.sh  13-shell.sh
tests/: Dockerfile.fedora  pyproject.toml  run_tests.py
tests/integration/: conftest.py  helpers.py  test_multi_version.py  test_native.py  test_verify.py  test_wsl.py
tests/stubs/: dnf  kwriteconfig6  lspci  rpm  sudo  systemctl
tests/unit/: helpers.bash  run_module.sh  test_detect.bats  test_detect.py  test_modules.bats  test_modules.py  test_run_tests.py  test_runner.py  test_shell_init.py  test_utils.bats
